[package]
name = "yew-pokemon"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
web-sys = "0.3"
reqwest = "0.11"
wasm-bindgen-futures = "0.4"
serde_json = "1"
rand = "0.8"
getrandom = { version = "0.2.4", features = ["js"] }